@@ -1,0 +1,3 @@
+This directory contains scripts and tools needed to build libtiff library
+and its utilities in various environments.
+
