@@ -1,4 +1,4 @@
-# $Id: SConstruct,v 1.3 2006-06-07 15:39:03 dron Exp $
+# $Id: SConstruct,v 1.4 2007-02-24 15:03:50 dron Exp $
 
 # Tag Image File Format (TIFF) Software
 #
@@ -70,3 +70,4 @@ SRCS = [ \
 
 StaticLibrary('tiff', SRCS)
 SharedLibrary('tiff', SRCS)
+
