@@ -41,6 +41,7 @@ dist_man1_MANS = \
 	tiff2rgba.1 \
 	tiffcmp.1 \
 	tiffcp.1 \
+	tiffcrop.1 \
 	tiffdither.1 \
 	tiffdump.1 \
 	tiffgt.1 \
